# Satellite-Fleet-Task-Scheduler

./: README.md
Templates/: Template.cpp  Template.h  Template_test.cpp  test  test.cpp
src/: CMakeLists.txt  build.sh  gtest.cmake  main.sh  unitTest.sh
src/Common/: AppConexionLayer.cpp  AppConexionLayer.h  CMakeLists.txt  Debug.h  FrameLayer.cpp  FrameLayer.h  Resources.cpp  Resources.h  Resources_test.cpp  SharedDeclarations.h  Socket.cpp  Socket.h  SocketClient.cpp  SocketClient.h  SocketServer.cpp  SocketServer.h  Task.cpp  Task.h  Task_test.cpp  Types.h  Utilities.cpp  Utilities.h
src/GroundControl/: CMakeLists.txt  GroundControl.cpp  GroundControl.h  GroundControl_test.cpp  PermutationTaskSolver.cpp  PermutationTaskSolver.h  PermutationTaskSolver_test.cpp
src/GroundControl/UnitTest/: CMakeLists.txt  unitTest.cpp
src/GroundControl/main/: CMakeLists.txt  main.cpp
src/Satelite/: CMakeLists.txt  Satelite.cpp  Satelite.h  Satelite_test.cpp
src/Satelite/UnitTest/: CMakeLists.txt
src/Satelite/main/: CMakeLists.txt  main.cpp
